[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/eurocine/Eurocine Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/players_list.gd" type="Script" id=2]
[ext_resource path="res://scripts/logging.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 28
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 1 )

[node name="screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="frame_rate" type="Label" parent="."]
margin_left = 893.0
margin_top = 31.0
margin_right = 994.0
margin_bottom = 71.0
text = "60"
align = 1
valign = 1

[node name="label_for_joined_players" type="Label" parent="."]
margin_left = 258.0
margin_top = 71.0
margin_right = 770.0
margin_bottom = 123.0
grow_horizontal = 0
grow_vertical = 0
text = "List of joined players"
align = 1
valign = 1

[node name="players_list" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 123.0
margin_right = 1006.0
margin_bottom = 539.0
script = ExtResource( 2 )

[node name="demo" type="HBoxContainer" parent="players_list"]
margin_right = 988.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="name" type="Label" parent="players_list/demo"]
margin_right = 244.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
text = "name"
align = 1
valign = 1
clip_text = true

[node name="id" type="Label" parent="players_list/demo"]
margin_left = 248.0
margin_right = 492.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Enet id"
align = 1
valign = 1
clip_text = true

[node name="post" type="Label" parent="players_list/demo"]
margin_left = 496.0
margin_right = 740.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
text = "post"
align = 1
valign = 1
clip_text = true

[node name="ready" type="Label" parent="players_list/demo"]
margin_left = 744.0
margin_right = 988.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
text = "ready"
align = 1
valign = 1
clip_text = true

[node name="socket_send" type="Label" parent="."]
margin_right = 310.0
margin_bottom = 96.0
text = "ddfff"
align = 1
valign = 1

[node name="server_details" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="room_name" type="LineEdit" parent="server_details"]
margin_left = 562.0
margin_top = 96.0
margin_right = 884.0
margin_bottom = 192.0
text = "ddd"
align = 1

[node name="room_name_label" type="Label" parent="server_details"]
margin_left = 220.0
margin_top = 96.0
margin_right = 486.0
margin_bottom = 192.0
text = "Room Name"
valign = 1

[node name="password" type="LineEdit" parent="server_details"]
margin_left = 562.0
margin_top = 232.0
margin_right = 884.0
margin_bottom = 328.0
align = 1
secret = true

[node name="password_label" type="Label" parent="server_details"]
margin_left = 220.0
margin_top = 232.0
margin_right = 486.0
margin_bottom = 328.0
text = "Password"
valign = 1

[node name="Button" type="Button" parent="server_details"]
margin_left = 396.0
margin_top = 381.0
margin_right = 623.0
margin_bottom = 458.0
text = "Create Room"

[connection signal="pressed" from="server_details/Button" to="." method="_on_Button_pressed"]
